2010-02-23  Steve Block  <steveblock@google.com>

        Reviewed by Jeremy Orlow.

        Removes redundant Settings::setGeolocationEnabled and Settings::geolocationEnabled
        https://bugs.webkit.org/show_bug.cgi?id=35242

        This removes Chromium's WebSettings::setGeolocationEnabled

        * public/WebSettings.h:
        * src/WebSettingsImpl.cpp:
        * src/WebSettingsImpl.h:

2010-02-23  Dmitriy Belenko  <dbelenko@google.com>

        Reviewed by Darin Fisher.

        Chromium: Need to be able to get the bounds of selection
        rectangle(s)
        https://bugs.webkit.org/show_bug.cgi?id=34915

        This change will enable about 30 test cases to pass in Chromium.
        All of these test cases are related to selection rect boundaries.
        This change will enable the test cases to retrieve the selection
        rect boundary rectangle for the current selection.

        * public/WebFrame.h:
        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::selectionBoundsRect):
        * src/WebFrameImpl.h:

2010-02-23  Steve Block  <steveblock@google.com>

        Reviewed by Darin Adler.

        Adds ChromeClient::cancelGeolocationPermissionRequestForFrame
        https://bugs.webkit.org/show_bug.cgi?id=34962

        This method is required so that a Geolocation object can cancel an
        asynchronous permission request. This allows the chrome client to cancel
        any UI it is showing for the permission request.

        * src/ChromeClientImpl.h:
        (WebKit::ChromeClientImpl::cancelGeolocationPermissionRequestForFrame):

2009-02-22  Adam Langley  <agl@google.com>

        Reviewed by Darin Fisher.

        fontconfig on Linux can change the render preferences on a per strike
        basis (a strike a combination of face and size). Because of this, we
        need to query fontconfig each time a new FontPlatformData is created
        for a new size.

        This patch adds support for querying this via ChromiumBridge.
