@@ -1,3 +1,15 @@
+2010-02-23  James Hawkins  <jhawkins@chromium.org>
+
+        Reviewed by Darin Fisher.
+
+        [Chromium] Implement WebDocument::getElementsByTagName.
+
+        https://bugs.webkit.org/show_bug.cgi?id=35272
+
+        * public/WebDocument.h:
+        * src/WebDocument.cpp:
+        (WebKit::WebDocument::getElementsByTagName):
+
 2010-02-23  Steve Block  <steveblock@google.com>
 
         Reviewed by Jeremy Orlow.
